<resources>
    <string name="app_name">Gruppe B8 Healthy</string>
    <string name="rewardPoints">Belønnignspoint : 9999</string>
    <string name="yourRewards">Dine gevinster</string>
    <string name="buyReward">Køb skrabelod</string>
    <string name="title_activity_top_menu">TopMenu</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="settings"> Settings</string>
    <string name="profile"> Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rediger_profil">Rediger profil</string>
    <string name="tilfoj_foraldre_e_mail">Tilfoj foraldre E-mail</string>
    <string name="din_profil">Din profil</string>
    <string name="navn">Navn:</string>
    <string name="alder">Alder:</string>
    <string name="skole">Skole:</string>
    <string name="rgang">Årgang:</string>
</resources>
