<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reward.RewardPageFragment">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@color/colorMustard"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                app:srcCompat="@drawable/reward_page_your_prize_basketball" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/reward_page_your_prize_peanut" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                app:srcCompat="@drawable/reward_page_prize_fruit" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/reward_page_prize_phone" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                app:srcCompat="@drawable/reward_page_prize_football" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/nutrition_mejeri" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/reward_page_your_prize_peanut" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/reward_page_your_prize_peanut" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/reward_page_your_prize_peanut" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/reward_page_your_prize_peanut" />

        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/topMenuFragment"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/rewardPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/rewardPoints"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topMenuFragment" />

    <Button
        android:id="@+id/showRewardButton"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"


        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorMustard"
        android:text="@string/yourRewards"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rewardPoints"
        tools:text="Dine gevinster" />

    <Button
        android:id="@+id/buyRewardButton"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorMustard"
        android:text="@string/buyReward"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rewardPoints"
        tools:text="Køb skrabelod" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>